Fixed media title ellipsis in covers and image borders

--- a/styles/abstracts/_mixins.scss
+++ b/styles/abstracts/_mixins.scss
@@ -1,7 +1,8 @@
-@mixin text-ellipsis($line-clamp: 1) {
+@mixin text-ellipsis($line-clamp: 1, $max-height: none) {
     display: -webkit-box;
-    -webkit-line-clamp: $line-clamp;
-    -webkit-box-orient: vertical;
+    max-height: $max-height;
     overflow: hidden;
     text-overflow: ellipsis;
+    -webkit-line-clamp: $line-clamp;
+    -webkit-box-orient: vertical;
 }
